--- a/css/styles.css
+++ b/css/styles.css
@@ -1,25 +1,34 @@
+@import "./menu.css";
+
+:root {
+  --black: #000000;
+  --black-hover: hsl(0, 0%, 20%);
+  --white: #fffffe;
+  --bg: #0f0e17;
+  --bg-alt: #161422;
+  --primary: #fed941;
+  --primary-hover: hsl(48, 99%, 70%);
+  --grey: #a7a9be;
+  --fontPrimary: "Montserrat", sans-serif;
+  --headline1: 700 48px/58px var(--fontPrimary);
+  --headline2: 700 46px/56px var(--fontPrimary);
+  --headline3: 700 37px/31.5px var(--fontPrimary);
+  --headline4: 700 28px/34.13px var(--fontPrimary);
+  --headline5: 700 25px/30.48px var(--fontPrimary);
+  --body1: 400 18px/27px var(--fontPrimary);
+  --body1-bold: 700 18px/27px var(--fontPrimary);
+  --body2: 400 16px/22px var(--fontPrimary);
+  --body2-bold: 700 16px/22px var(--fontPrimary);
+  --button: 700 18px/28px var(--fontPrimary);
+  --caption: 400 12px/22px var(--fontPrimary);
+}
+
 body {
+  background: var(--bg);
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: var(--white);
+  font: var(--fontPrimary);
 }
-/* .wrapper {
-  max-width: 1280px;
-  margin: auto;
-} */
-
-/* .header {
-  background: #0e3fa9;
-  margin-bottom: 2em;
-  text-align: center;
-}
-.header img {
-  width: 200px;
-  position: relative;
-  top: 20px;
-  filter: drop-shadow(3px 3px 0 #f2a30c);
-} */
-
 .actions {
   display: flex;
   gap: 21px;
@@ -43,40 +52,6 @@ body {
 .actions > *::after:last-child {
   display: none;
 }
-
-/* form {
-  min-width: 320px;
-  display: flex;
-  gap: 0.5em;
-} */
-/* input {
-  font-size: 1rem;
-  font-family: system-ui;
-  padding: 0.5em 1em;
-  flex: 1;
-} */
-/* select {
-  font-size: 1rem;
-  padding: 0 1em;
-  border-radius: 0.5em;
-} */
-/* button {
-  font-size: 1rem;
-  background: #3f69ff;
-  padding: 1em;
-  color: white;
-  border: none;
-  border-radius: 0.5em;
-} */
-
-/* .movie-list {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, 200px);
-  justify-content: center;
-  box-sizing: border-box;
-  gap: 1em;
-} */
-
 .movie {
   position: relative;
   transition: 1s;
