--- a/css/carousel.css
+++ b/css/carousel.css
@@ -7,7 +7,10 @@
   overflow-x: hidden;
   margin: 0;
 }
-.video {
+.slider-slide {
+  position: relative;
+}
+.image-slide {
   margin: 0;
   display: inline-block;
   width: 100%;
@@ -23,4 +26,20 @@
 }
 .slider-bullet.selected {
   background: var(--white);
+}
+.button-container {
+  position: absolute;
+  bottom: 32px;
+  left: 23.5px;
+  display: flex;
+  gap: 16px;
+  flex-direction: row;
+}
+.content-buttonA {
+  font: var(--button);
+  color: var(--black);
+}
+.content-buttonB {
+  font: var(--button);
+  color: var(--primary);
 }
