--- a/css/carousel.css
+++ b/css/carousel.css
@@ -35,6 +35,12 @@
   gap: 16px;
   flex-direction: row;
 }
+.button-container-modal {
+  /* position: absolute; */
+  display: flex;
+  gap: 16px;
+  flex-direction: row;
+}
 .content-buttonA {
   font: var(--button);
   color: var(--black);
