--- a/css/search.css
+++ b/css/search.css
@@ -1,6 +1,6 @@
-.search-form {
+/* .search-form {
   display: inline;
-}
+} */
 .search-input {
   border-radius: 8px 0px 0px 8px;
   border: 1px solid var(--primary);
